--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -641,7 +641,7 @@ On kuitenkin huomattava, että ominaisuudet jakautuvat varsinkin järjestelmän 
 
 Kaikki muut ominaisuudet ovat kuitenkin sekä laadullisia että mitattavia ominaisuuksia. Metrisinä ne voidaan nähdä siten, että monessa jokin määrällinen ominaisuus korostuu. Esimerkiksi mitä enemmän riippuvuuksia yhdellä luokalla on, sitä enemmän siinä piilee mittarien mukaan ongelmia testattavuuden kannalta. Totuus voi kuitenkin olla toinen ja tämän takia jokainen mittari pitäisikin nähdä enemmän indikaattorina mahdollisille ongelmille. Oikeat ongelmien syyt löytyvät mittareiden osoittamien ongelmakohtien tarkemmalla analyysillä. Tässä analyysissä voidaan miettiä esimerkiksi mitkä tekijät ohjelmistojärjestelmässä ovat luoneet ongelmallisen tilanteen ja löytyykö ongelmaan ratkaisua. 
 
-Olio-ohjelmoinnista on määritelty tiettyjä klassisia metriikoita \citep{chidamber_metricssuite_1994} ja taulukosta löytyvät ominaisuudet heijastelevat vahvasti näiden metriikoiden ideoihin. Testattavuuden analysointi on täten mahdollista samalla, kun arvioidaan järjestelmän muita ei-toiminnallisia vaatimuksia.
+Olio-ohjelmoinnista on määritelty klassisia metriikoita \citep{chidamber_metricssuite_1994} ja taulukosta löytyvät ominaisuudet heijastelevat vahvasti näiden metriikoiden ideoihin. Testattavuuden analysointi on täten mahdollista samalla, kun arvioidaan järjestelmän muita ei-toiminnallisia vaatimuksia.
 
 \begin{sidewaystable}[htbp]
 	\centering
