--- a/kandi/references-fi.bib
+++ b/kandi/references-fi.bib
@@ -327,7 +327,7 @@ publisher={{IEEE.}}
 @article{Voas:1995:STN:624607.625469,
  author = {Voas, Jeffrey M. and Miller, Keith W.},
  title = {Software Testability: The New Verification},
- journal = {IEEE Softw.},
+ journal = {IEEE Software},
  issue_date = {May 1995},
  volume = {12},
  number = {3},
