--- a/kandi/malli.tex
+++ b/kandi/malli.tex
@@ -171,34 +171,26 @@ Tutkielman tuloksena on saatu muodostettua seitsemän päätekijää, jotka löy
 \section{Johdanto}
 
 
-%\section{Johdanto}
-%purkaa auki teknisemmälle yleisölle samalla käsitteitä määritellen tutkimuskysymyksen, ratkaisuille ympäristöstä esiintulevat vaatimukset ja keskeiset käsitteet näiden asioiden esittelemiseksi.
-
-%antaa riittävästi termistöä ja kysymyksenasetteluja, jotta myöhempänä teksissä on mahdollisuus analyysiin ja evaluointiin.
-%Keskimmäiset luvut keskittyvät kukin "opettamaan" lukijalle yhden osakysymyksen tai näkökulman käsiteltävään asiaan. Lukujen työnjaon tulisi olla selkeä ja niillä tulee olla selkeä oma rakenteensa, jonka valintaperuste on lukijalle kerrottu.
-
-%Viimeistä edellinen luku on varsinaisen kontribuution koti: vertailu, soveltaminen, osien synteesi ja mahdolliset evaluointimenetelmät ja -tulokset pääroolissa.
-
 Ohjelmistoarkkitehtuuri on ohjelmistojen ymmärtämisen kannalta tärkeä konsepti, josta jokaisen ohjelmoijan pitäisi olla tietoinen, sillä jokaisella ohjelmistojärjestelmällä on oma arkkitehtuurinsa. Järjestelmän arkkitehtuurin voidaan nähdä muodostuvan niistä hallitsevista ominaisuuksista, jotka ovat konkretisoituneet sen elementteihin ja suhteisiin \citep[s. 2]{ISOIEEE42010}. Suunnittelematon arkkitehtuuri eli niin sanottu \textit{Big Ball of Mud} \footnote{Lisätietoa \textit{Big Ball of Mud}-mallista: \url{http://www.laputan.org/mud/}} saattaa pahimmassa tapauksessa olla yksi epäonnistuneen projektin tunnusmerkkejä, kun taas hyvin muodostettu arkkitehtuuri auttaa eri sidosryhmien välisessä kommunikaatiossa ja tekee tuotettavasta ohjelmistojärjestelmästä helposti lähestyttävän. Onnistunut arkkitehtuuri taas helpottaa sekä ohjelmiston testausta että validointia ja on yksi suurimmista onnistumistekijöistä projektin jatkon kannalta. 
 
 Ohjelmistojen ylläpidettävyys lasketaan yhdeksi ei-toiminnalliseksi laatuvaatimukseksi, ja siihen kuuluu vahvasti ohjelmistojen testattavuus \citep{ISO/IEC25010:2011}, joka taas vaatimuksena on lähempänä ohjelmoijaa kuin asiakasta. Testausta tapahtuu ohjelmistojärjestelmän elinaikana useita kertoja, joista  aikaisimmat jo projektin alkumetreillä, kun halutaan evaluoida järjestelmän toiminnallisuutta. Testattavuus taas määrittelee, kuinka hyvin järjestelmään kohdistuva testaus löytää mahdolliset virheet ja kuinka helppo on erilaisia testitapauksia luoda järjestelmää varten. Arkkitehtuurin ja testattavuuden yhteys on kuitenkin hieman häilyvä, vaikka monelle kehittäjälle hyvät käytänteet ovatkin tuttuja esimerkiksi oliopohjaisten järjestelmien arkkitehtuurista. Suuri osa opituista käytänteistä kuitenkin ottaa kantaa vain lähdekooditasolla tapahtuviin ongelmakohtiin, jolloin arkkitehtuurinen puoli saattaa jäädä kokonaan huomioimatta. Tämä tutkielma pyrkii selkeyttämään ohjelmistojärjestelmän rakenteen ja testattavuuden suhdetta sekä sitä, miten testattavuus tulee ilmi ohjelmistoarkkitehtuurissa, kun ohjelmistoarkkitehtuuri nähdään ohjelmistojärjestelmän rakenteena. Tutkielma edellyttää lukijalta tuntemusta olio-ohjelmoinnin paradigmasta, tietoa siitä miten oliopohjaisia järjestelmiä on mahdollista testata sekä hieman ymmärrystä käsitteistä \textit{yksikkötestaus} ja \textit{integraatiotestaus}. 
 
 \subsection{Tutkimuskysymys}
-Tutkielma vastaa kysymykseen miten testattavuus näkyy ohjelmistojen arkkitehtuurisella tasolla. Itse kysymys voidaan jakaa vielä tarkentaviin kysymyksiin: mitä on testattavuus ohjelmistojärjestelmissä ja mitkä tekijät siihen vaikuttavat, miten arkkitehtuuria on mahdollista kuvata ja miten ohjelmistojärjestelmän arkkitehtuurista luotu näkymä kertoo jotain järjestelmän testattavuudesta. 
+Tutkielmassa pyritään selvittämään, miten testattavuus näkyy ohjelmistojen arkkitehtuurisella tasolla. Itse kysymys voidaan jakaa vielä tarkentaviin kysymyksiin: mitä testattavuus on ohjelmistojärjestelmissä ja mitkä tekijät siihen vaikuttavat, miten arkkitehtuuria on mahdollista kuvata ja miten ohjelmistojärjestelmän arkkitehtuurista luotu näkymä kertoo jotain järjestelmän testattavuudesta. 
 
 \subsection{Tutkimusmenetelmä}
-Tutkimuskysymykseen vastataan kirjallisuuskatsauksen avulla ja tutkimalla mitkä seikat tuovat testattavuutta ohjelmistojärjestelmään. Näiden perusteella pyritään tunnistamaan kriittisiä arkkitehtuurisia ominaisuuksia, joiden avulla testattavuuden tasoa olisi mahdollista tarkastella järjestelmässä. Testattavuuden havaitsemiseen etsitään näkymää nykyisistä menetelmistä kuvata arkkitehtuuria. Näitä menetelmiä ovat pääasiassa erilaisten näkymien ja näkökulmien joukko, joiden avulla on mahdollista tuoda ohjelmistojärjestelmästä esiin joitain sen erityispiirteitä.
+Tutkimuskysymykseen vastataan kirjallisuuskatsauksen avulla ja tutkimalla, mitkä seikat tuovat testattavuutta ohjelmistojärjestelmään. Näiden perusteella pyritään tunnistamaan kriittisiä arkkitehtuurisia ominaisuuksia, joiden avulla testattavuuden tasoa olisi mahdollista tarkastella järjestelmässä. Testattavuuden havaitsemiseen etsitään näkymää nykyisistä menetelmistä kuvata arkkitehtuuria. Näitä menetelmiä ovat pääasiassa erilaisten näkymien ja näkökulmien joukko, joiden avulla on mahdollista tuoda ohjelmistojärjestelmästä esiin joitain sen erityispiirteitä.
 
 Itse tutkimus on rajattu ainoastaan oliopohjaiseen arkkitehtuuriin ja sen erilaisiin kuvaamistapoihin. Testaustavoista on mainittu yksikkö- ja integraatiotestaus, koska niiden oletetaan olevan tuttuja lukijalle. Arkkitehtuurin mallintamisesta on jätetty ADL:t (architecture description languages) pois, koska ne eivät tarjoa visuaalista näkymää arkkitehtuuriin, kuin piirtämiseen keskittyvät mallinnustavat. Myöskään erilaisia arkkitehtuurisia tyylejä ei vertailla tutkimuksessa testattavuuden kannalta, vaan tutkimus keskittyy nimenomaan ohjelmistojärjestelmän konkreettisen rakenteen arvioimiseen testattavuuden kannalta.
 
 \subsection{Tutkimuksen rakenne}
 
-Luvussa \ref{software_architecture_main} käydään läpi ohjelmistoarkkitehtuuria käsitteenä ja luodaan pohja eri kuvaustavoille ohjelmistoarkkitehtuuria varten. Samalla kuvataan miten ja mistä näkymä voidaan luoda ohjelmistojärjestelmälle. Luku \ref{testability_main} tarkentaa testattavuutta laadullisena tekijänä ja pyrkii määrittelemään mitä on testattavuus ohjelmistojärjestelmissä. Luku \ref{arch_testability_main} määrittelee arkkitehtuurin ja testattavuuden välistä suhdetta ja sen lopussa on muodostettu kokoava taulukko tutkielman aikana löydetyistä testattavuuteen vaikuttavista tekijöistä. Viimeinen luku \ref{pondering} esittää kirjoittajan omat pohdinnat ja ehdottaa tutkimuksia tulevaisuuteen. 
+Luvussa \ref{software_architecture_main} käydään läpi ohjelmistoarkkitehtuuria käsitteenä ja luodaan pohja eri kuvaustavoille ohjelmistoarkkitehtuuria varten. Samalla kuvataan, miten ja mistä näkymä voidaan luoda ohjelmistojärjestelmälle. Luku \ref{testability_main} tarkentaa testattavuutta laadullisena tekijänä ja pyrkii määrittelemään, mitä testattavuus on ohjelmistojärjestelmissä. Luku \ref{arch_testability_main} määrittelee arkkitehtuurin ja testattavuuden välistä suhdetta ja sen lopussa on muodostettu kokoava taulukko tutkielman aikana löydetyistä testattavuuteen vaikuttavista tekijöistä. Viimeinen luku \ref{pondering} esittää kirjoittajan omat pohdinnat ja ehdottaa tutkimuksia tulevaisuuteen. 
 
 
 \section{Ohjelmistoarkkitehtuuri} \label{software_architecture_main}
 Arkkitehtuuri ohjelmistojärjestelmissä on käsite, joka ei ole kovin yksiselitteinen eikä siitä ole yksimielistä määritelmää \citep[s. 363]{solms_what_2012}. 
-Ohjelmistoarkkitehtuuri kuitenkin kuvaa vähintään aina abstraktilla tasolla toteutettavaa ohjelmistojärjestelmää niin, että sitä tarkastelevan tahon on mahdollista keskittyä vain suppeeseen alueeseen kerrallaan. Arkkitehtuurin kuvaaminen tapahtuu usein visuaalisella tavalla, koska visuaalisesta mallista on nopea ja helppo saada ulos tarvittava informaatio. Visuaalisen mallin avulla on mahdollista myös nähdä ohjelmistojärjestelmästä sellaista lähdekoodiin piilotettua informaatiota, joka muuten jäisi sen kirjoittaneen kehittäjän omiksi ajatuksiksi.   
+Ohjelmistoarkkitehtuuri kuvaa kuitenkin vähintään aina abstraktilla tasolla toteutettavaa ohjelmistojärjestelmää niin, että sitä tarkastelevan tahon on mahdollista keskittyä vain suppeeseen alueeseen kerrallaan. Arkkitehtuurin kuvaaminen tapahtuu usein visuaalisella tavalla, koska visuaalisesta mallista on nopea ja helppo saada ulos tarvittava informaatio. Visuaalisen mallin avulla on mahdollista myös nähdä ohjelmistojärjestelmästä sellaista lähdekoodiin piilotettua informaatiota, joka muuten jäisi sen kirjoittaneen kehittäjän omiksi ajatuksiksi.   
 
 \subsection{Ohjelmistojen arkkitehtuuri käsitteenä} \label{ark}
 Ohjelmistoarkkitehtuuri voidaan nähdä karkeasti neljästä eri näkökulmasta  \citep[s. 2-7]{gorton_understanding_2011}:  ohjelmiston rakenteen kuvaajana, kuvaajana ohjelmiston komponenttien välisille suhteille, ei-toiminnalliset (non-functional) vaatimukset huomioon ottavana mallina ja yleisenä abstraktiona. 
@@ -686,13 +678,13 @@ Olio-ohjelmoinnista on määritelty klassisia metriikoita \citep{chidamber_metri
 
 Testattavuuteen löydetyt tekijät ovat osoittautuneet mielestäni hyvin keskeisiksi oliojärjestelmien ominaisuuksiksi, jotka heijastelevat olio-ohjelmoinnin hyviä käytänteitä. Taulukossa \ref{tab:conclusions} olevien ominaisuuksien huomioon ottaminen ja noudattaminen nostaa ohjelmistojen laatua myös muullakin kuin vain testattavuuden saralla. Esimerkiksi järjestelmän modulaarisuuden parantaminen vaikuttaa sekä muunneltavuuteen että testattavuuteen.
 
-Luvussa \ref{arch_testability_main} esiin tulleet metriikat testattavuudesta ovat hieman vaikeakäyttöisiä oikeissa projekteissa, koska usein järjestelmää ei mallinneta täydellisesti ja saattaa olla, ettei järjestelmän visuaalinen kuvaus noudattele täysin, tai edes etäisesti, UML-standardia. On myös vaikeaa määritellä, että mitä kaikkea pystytään metrisesti löytämään ilman laadullista analyysiä. Ilman metriikoiden osoittamien ongelmakohtien analyysia saatetaan nimittäin helposti joutua tilanteeseen, jossa metriikka on sokea todellisille ongelmille tai hälyttää vääristä virheistä. 
+Luvussa \ref{arch_testability_main} esiin tulleet metriikat testattavuudesta ovat hieman vaikeakäyttöisiä oikeissa projekteissa, koska usein järjestelmää ei mallinneta täydellisesti ja saattaa olla, ettei järjestelmän visuaalinen kuvaus noudattele täysin, tai edes etäisesti, UML-standardia. On myös vaikeaa määritellä, mitä kaikkea pystytään metrisesti löytämään ilman laadullista analyysiä. Ilman metriikoiden osoittamien ongelmakohtien analyysia saatetaan helposti joutua tilanteeseen, jossa metriikka on sokea todellisille ongelmille tai hälyttää vääristä virheistä. 
 
-Aliluvussa \ref{arch_smells_and_testability} esille nousseet arkkitehtuuriset hajut ja riippuvuusgraafeista saatava data aliluvussa \ref{uml_arch_test} ovat kuitenkin hyvinkin potentiaalisia keinoja ohjelmistokehittäjän tueksi löytämään ongelmakohtia projekteista. Näiden automatisointi olisi mielestäni hyvin läpimurtavaa ja koen, että itsekin käyttäisin tällaista hyväksi, jos analyysityökalu olisi olemassa. Arkkitehtuurista analyysia suorittavia työkaluja ei tällä hetkellä kovinkaan paljoa ole ja harva edes ottaa huomioon esimerkiksi arkkitehtuurisia hajuja, vaan ne keskittyvät enemmän koodihajuihin ja niiden löytämiseen\footnote{Esimerkkinä analyysityökalu SonarQube: \url{http://www.sonarqube.org}}. Tämä painottuneisuus kuitenkin on todennäköisesti siitä syystä, että arkkitehtuurisia hajuja on hyvin vaikeaa koneellisesti staattisen analyysin keinoin tuoda ilmi, koska ohjelmistojärjestelmän rakenteen taustalla on jokin ihmisen tekemä piilevä päätös, jota ei voida havaita välttämättä kooditasolta ollenkaan.
+Aliluvussa \ref{arch_smells_and_testability} esille nousseet arkkitehtuuriset hajut ja riippuvuusgraafeista saatava data aliluvussa \ref{uml_arch_test} ovat kuitenkin hyvinkin potentiaalisia keinoja ohjelmistokehittäjän tueksi löytämään ongelmakohtia projekteista. Näiden automatisointi olisi mielestäni hyvin läpimurtavaa, koska se helpottaisi paljon kehittäjän työtä. Arkkitehtuurista analyysia suorittavia työkaluja ei tällä hetkellä kovinkaan paljoa ole ja harva niistä edes ottaa huomioon esimerkiksi arkkitehtuurisia hajuja, ja keskittyy enemmän koodihajuihin ja niiden löytämiseen\footnote{Esimerkkinä analyysityökalu SonarQube: \url{http://www.sonarqube.org}}. Tämä painottuneisuus johtuu todennäköisesti siitä syystä, että arkkitehtuurisia hajuja on vaikea tuoda ilmi koneellisesti staattisen analyysin keinoin, koska ohjelmistojärjestelmän rakenteen taustalla on jokin ihmisen tekemä piilevä päätös, jota ei voida havaita välttämättä kooditasolta ollenkaan.
 
-Testattavuuteen vaikuttavia arkkitehtuurisia hajuja pitäisi mielestäni tutkia lisää ja muodostaa niistä yhtä kattava katalogi, kuin koodihajuista on muodostettu\footnote{Koodihajut katalogina: \url{https://refactoring.guru/catalog}}. Näihin arkkitehtuurisiin hajuihin voitaisiin yhdistää testattavuuteen vaikuttavat hybridihajut aliluvusta \ref{hybridsmells}, jolloin olisi mahdollista löytää arkkitehtuurisia ongelmakohtia kooditasolta alkaen. Näistä olevia tutkimuksia on kuitenkin melko vähän ja vielä harvempi ottaa mukaan edes testattavuutta, joka on harmi koska testaus on tärkeä osa jokaisen ohjelmiston elinkaarta.
+Testattavuuteen vaikuttavia arkkitehtuurisia hajuja pitäisi tutkia lisää ja muodostaa niistä yhtä kattava katalogi kuin koodihajuista on muodostettu\footnote{Koodihajut katalogina: \url{https://refactoring.guru/catalog}}. Näihin arkkitehtuurisiin hajuihin voitaisiin yhdistää testattavuuteen vaikuttavat hybridihajut, jolloin olisi mahdollista löytää arkkitehtuurisia ongelmakohtia kooditasolta alkaen. Tästä aiheesta tehtyjä tutkimuksia on kuitenkin melko vähän, ja vielä harvempi ottaa mukaan edes testattavuutta, mikä on harmi koska testaus on tärkeä osa jokaisen ohjelmiston elinkaarta.
 
-Tulevaisuuden tutkimuksista voitaisiinkin painottaa enemmän testattavuuden saralle, koska nyt aiheesta löytyy vaihtelevasti tutkimuksia, jotka painottavat eri asioita. Testattavuutta laatutekijänä pitäisi tutkia enemmän ja varsinkin rakenteen ja jopa eri arkkitehtuuristen tyylien vaikutusta testattavuuteen. 
+Tulevaisuuden tutkimuksissa voitaisiinkin painottaa enemmän testattavuutta, koska nyt niitä löytyy vaihtelevasti kyseisestä aiheesta, ja ne painottavat eri asioita. Testattavuutta laatutekijänä pitäisi tutkia enemmän ja varsinkin rakenteen ja tätä kautta eri arkkitehtuuristen tyylien vaikutusta testattavuuteen. 
 
 
 
@@ -701,7 +693,7 @@ Tulevaisuuden tutkimuksista voitaisiinkin painottaa enemmän testattavuuden sara
 
 %Tutkimuksessa on tehty katsaus ensin ohjelmistoarkkitehtuuriin käsitteenä ja luotu sen avulla katsaus siihen miten ohjelmistoarkkitehtuuria mallinnetaan. Ohjelmistoarkkitehtuuri on nähty tapana kuvata järjestelmän todellista rakennetta tavalla, joka kertoisi mahdollisimman selkeästi järjestelmän todellisen luonteen ilman tarvetta lähdekoodille. Katsauksen jälkeen on etsitty vastausta sille mitä on järjestelmän testattavuus. Testattavuudesta on jatkettu tarkastelua arkkitehtuuriselta näkökulmalta ja etsitty tapoja joiden avulla arkkitehtuurin mallinnus tuottaisia mahdollisimman paljon informaatiota järjestelmän testattavuudesta.
 
-Tutkielman tuloksena tutkimuskysymykseen voidaan vastata seuraavalla tavalla. Testattavuus näkyy ohjelmistojen arkkitehtuurissa niinä laadullisina ja metrisinä rakenteellisina ominaisuuksina, jotka korostavat testattavuutta. Laadulliset ominaisuudet voi olla jokin komponentin konkreettinen ominaisuus, joka helpottaa testausprosessia huomattavasti tai se voi olla komponenttien vastuiden ja vaatimusten ymmärtäminen niin, että testausta on helpompi tehdä. Testattavia ominaisuuksia järjestelmälle voidaan määritellä sen havaittavuuden, hallittavuuden ja jäljitettävyyden tasot. Nämä pätevät myös yksittäisiin komponentteihin ja niiden tarjoamiin palveluihin, jotka metodeina ja rajapintoina usein nähdään.
+Testattavuus näkyy ohjelmistojen arkkitehtuurissa niinä laadullisina ja metrisinä rakenteellisina ominaisuuksina, jotka korostavat testattavuutta. Laadulliset ominaisuudet voivat olla jokin komponentin konkreettinen ominaisuus, joka helpottaa testausprosessia huomattavasti, tai se voi olla komponenttien vastuiden ja vaatimusten ymmärtäminen niin, että testausta on helpompi tehdä. Järjestelmän testattaviksi ominaisuuksiksi voidaan määritellä sen havaittavuuden, hallittavuuden ja jäljitettävyyden tasot. Nämä pätevät myös yksittäisiin komponentteihin ja niiden tarjoamiin palveluihin, jotka nähdään usein metodeina ja rajapintoina.
 
 Metrisinä tekijöinä voidaan nähdä rakenteen kompleksisuus, perinnän taso, kytkennän määrä, riippuvuuksien laatu ja määrä, koheesion taso ja vastuiden jakautuminen. Kaikkia näitä on mahdollista tarkastella UML:n luokka- ja komponenttikaavion kaavion sekä riippuvuusgraafin avulla. Hieman toisenlaista analyysiä voidaan tehdä etsimällä visuaalisesta näkymästä testattavuuteen vaikuttavia arkkitehtuurisia hajuja (\textit{Cross-Module Cycle, Connector Ency, Scattered Parasitic Functionality}) ja niihin vaikuttavia hybridihajuja. 
 
